# alluvion

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  requirements.txt  setup.py
alluvion/: __init__.py  depot.py  store.py  variable.py
include/alluvion/: allocator.hpp  base_variable.hpp  camera.hpp  colormaps.hpp  complete_framebuffer.hpp  constants.hpp  contact.hpp  data_type.hpp  display.hpp  display_proxy.hpp  double_shorthands.hpp  float_shorthands.hpp  glyph_attr.hpp  graphical_allocator.hpp  graphical_variable.hpp  helper_math.h  mesh.hpp  mesh_buffer.hpp  pile.hpp  pinned_variable.hpp  runner.hpp  shading_program.hpp  solver.hpp  solver_df.hpp  solver_i.hpp  solver_ii.hpp  solver_pci.hpp  solver_pellet.hpp  store.hpp  texture.hpp  trackball.hpp  typesetter.hpp  unique_device_pointer.hpp  unique_graphical_resource.hpp  unique_mesh_buffer.hpp  unique_pinned_pointer.hpp  unique_texture.hpp  unique_vao.hpp  unique_vbo.hpp  usher.hpp  (+1 more)
include/alluvion/dg/: bounding_sphere.hpp  bounding_sphere_hierarchy.hpp  box_distance.hpp  box_shell_distance.hpp  capsule_distance.hpp  common.hpp  cubic_lagrange_discrete_grid.hpp  cylinder_distance.hpp  discrete_grid.hpp  distance.hpp  entity_containers.hpp  entity_iterators.hpp  gauss_quadrature.hpp  halfedge.hpp  infinite_cylinder_distance.hpp  infinite_tube_distance.hpp  kd_tree.hpp  lru_cache.hpp  mesh_distance.hpp  peirce_quadrature.hpp  point_triangle_distance.hpp  serialize.hpp  sph_kernels.hpp  sphere_distance.hpp  spinlock.hpp  triangle_mesh.hpp  volume_integration.hpp  z_sort_table.hpp
include/alluvion/glsl/: glyph.frag  glyph.vert  mesh_with_normal.frag  mesh_with_normal.vert  particle.frag  particle.vert  screen.frag  screen.vert
include/glad/: glad.h
lib/: CMakeLists.txt  allocator.cu  camera.cu  complete_framebuffer.cu  constants.cu  display.cu  display_proxy.cu  glad.c  graphical_allocator.cu  mesh.cu  mesh_buffer.cu  pile.cu  pyalluvion.cu  runner.cu  shading_program.cu  store.cu  trackball.cu  typesetter.cu  unique_device_pointer.cu  unique_graphical_resource.cu  unique_mesh_buffer.cu  unique_pinned_pointer.cu  unique_texture.cu  unique_vao.cu  unique_vbo.cu
lib/dg/: bounding_sphere_hierarchy.cu  cubic_lagrange_discrete_grid.cu  discrete_grid.cu  entity_containers.cu  entity_iterators.cu  gauss_quadrature.cu  infinite_cylinder_distance.cu  mesh_distance.cu  point_triangle_distance.cu  sph_kernels.cu  sphere_distance.cu  triangle_mesh.cu  volume_integration.cu
src/: CMakeLists.txt  developing_hagen_poiseuille.cu  display_test.cu  hagen_poiseuille.cu  stabilizer.cu  stationary.cu  stationary_dfsph.cu  triangle-opengl.cu
tests/: CMakeLists.txt  field_gen.cu  field_op.cu  runner_test.cu  store_op.cu
